[gd_scene load_steps=40 format=3 uid="uid://bd0fika4hyhvw"]

[ext_resource type="Theme" uid="uid://6vk2wej0sape" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/resources/9_verb_theme.tres" id="1_qh2tb"]
[ext_resource type="Script" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/9_verb_gi.gd" id="2_v01ea"]
[ext_resource type="ButtonGroup" uid="uid://y1thfsxxjowe" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/resources/9_verb_button_group.tres" id="3_77ocs"]
[ext_resource type="PackedScene" uid="uid://cg18h3icrip1r" path="res://addons/popochiu/engine/objects/graphic_interface/components/dialog_text/dialog_text.tscn" id="3_oliab"]
[ext_resource type="Script" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/commands_container/9_verb_command_button.gd" id="3_su7pr"]
[ext_resource type="PackedScene" uid="uid://esorelppu4hw" path="res://addons/popochiu/engine/objects/graphic_interface/components/hover_text/hover_text.tscn" id="4_ljv1q"]
[ext_resource type="PackedScene" uid="uid://bdgs3xsbq3gdd" path="res://addons/popochiu/engine/objects/graphic_interface/components/system_text/system_text.tscn" id="4_ninsa"]
[ext_resource type="Script" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/9_verb_hover_text.gd" id="6_olqnt"]
[ext_resource type="PackedScene" uid="uid://dhsfl8ot4j5fj" path="res://addons/popochiu/engine/objects/graphic_interface/components/dialog_menu/dialog_menu.tscn" id="7_n3yn3"]
[ext_resource type="Script" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/commands_container/9_verb_commands_container.gd" id="7_uavso"]
[ext_resource type="Script" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/inventory_container/9_verb_inventory_container.gd" id="10_34gga"]
[ext_resource type="Texture2D" uid="uid://dfa511cxg31g5" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/inventory_container/sprites/9verb_inventory_up.png" id="11_2j8k2"]
[ext_resource type="Texture2D" uid="uid://d0fwvj88bhggm" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/sprites/9verb_cursor.png" id="11_y5a23"]
[ext_resource type="PackedScene" uid="uid://crla6to4mm0p7" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/settings_popup/9_verb_settings_popup.tscn" id="12_b7ut3"]
[ext_resource type="Texture2D" uid="uid://s4phlorab5ds" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/inventory_container/sprites/9verb_inventory_down.png" id="12_qp2oq"]
[ext_resource type="PackedScene" uid="uid://db6csk6i4f3un" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/inventory_container/9_verb_slot.tscn" id="13_67u47"]
[ext_resource type="Texture2D" uid="uid://dcl6wrqgsdqa1" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/sprites/9verb_ico_settings.png" id="13_80hcp"]
[ext_resource type="PackedScene" uid="uid://dfrsiyyqncspo" path="res://addons/popochiu/engine/objects/graphic_interface/components/popups/history/history_popup.tscn" id="15_5234w"]
[ext_resource type="PackedScene" uid="uid://cndputybyj57n" path="res://addons/popochiu/engine/objects/graphic_interface/components/popups/save_and_load/save_and_load_popup.tscn" id="15_t7jqg"]
[ext_resource type="PackedScene" uid="uid://dv1gec8q4h6b7" path="res://addons/popochiu/engine/objects/graphic_interface/templates/9_verb/components/quit_popup/9_verb_quit_popup.tscn" id="20_qsfrl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bfdxb"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 6.0
bg_color = Color(0, 0, 0, 1)
border_color = Color(1, 1, 1, 1)
corner_detail = 4
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gcqg0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oxi4b"]
atlas = ExtResource("11_2j8k2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ogfoj"]
atlas = ExtResource("11_2j8k2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_af2l8"]
atlas = ExtResource("11_2j8k2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qft8m"]
atlas = ExtResource("11_2j8k2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1x80"]
atlas = ExtResource("12_qp2oq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qjlh"]
atlas = ExtResource("12_qp2oq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhaqa"]
atlas = ExtResource("12_qp2oq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5757h"]
atlas = ExtResource("12_qp2oq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ckh2"]
atlas = ExtResource("11_y5a23")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jysoy"]
atlas = ExtResource("11_y5a23")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2brv"]
atlas = ExtResource("11_y5a23")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lngh"]
atlas = ExtResource("11_y5a23")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwabf"]
atlas = ExtResource("11_y5a23")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flm5d"]
atlas = ExtResource("11_y5a23")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vpmp7"]
atlas = ExtResource("11_y5a23")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0twu0"]
atlas = ExtResource("11_y5a23")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_xtf0b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ckh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jysoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2brv")
}],
"loop": true,
"name": &"active",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lngh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwabf")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_flm5d")
}],
"loop": true,
"name": &"use",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vpmp7")
}],
"loop": true,
"name": &"wait",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0twu0")
}],
"loop": true,
"name": &"walk_to",
"speed": 5.0
}]

[node name="9VerbGI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_qh2tb")
script = ExtResource("2_v01ea")

[node name="DialogText" parent="." instance=ExtResource("3_oliab")]
layout_mode = 1

[node name="PortraitTextPanel" parent="DialogText" index="1"]
anchors_preset = -1
anchor_top = 0.0
anchor_bottom = 0.0
offset_top = 5.0
offset_bottom = 57.0
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="Caption" parent="DialogText" index="2"]
visible = false
offset_left = 16.0
offset_top = -67.0
offset_right = -16.0
offset_bottom = -51.0

[node name="SystemText" parent="." instance=ExtResource("4_ninsa")]
visible = false
layout_mode = 1
offset_left = 39.0
offset_top = -10.0
offset_right = -39.0
offset_bottom = 10.0
theme_override_styles/normal = SubResource("StyleBoxFlat_bfdxb")

[node name="BottomContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -48.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_gcqg0")
metadata/_edit_lock_ = true
metadata/_edit_group_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="BottomContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HoverTextCentered" parent="BottomContainer/VBoxContainer" instance=ExtResource("4_ljv1q")]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 12
fit_content = true
script = ExtResource("6_olqnt")
follows_cursor = false

[node name="PanelContainer" type="PanelContainer" parent="BottomContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BottomContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="CommandsContainer" type="GridContainer" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 0
theme_override_constants/v_separation = 0
columns = 3
script = ExtResource("7_uavso")

[node name="Open" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Open"
script = ExtResource("3_su7pr")
command = 1

[node name="PickUp" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Pick Up"
script = ExtResource("3_su7pr")
command = 2

[node name="Push" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Push"
script = ExtResource("3_su7pr")
command = 3

[node name="Close" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Close"
script = ExtResource("3_su7pr")
command = 4

[node name="LookAt" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Look At"
script = ExtResource("3_su7pr")
command = 5

[node name="Pull" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Pull"
script = ExtResource("3_su7pr")
command = 6

[node name="Give" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Give"
script = ExtResource("3_su7pr")
command = 7

[node name="TalkTo" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Talk To"
script = ExtResource("3_su7pr")
command = 8

[node name="Use" type="Button" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/CommandsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 12
toggle_mode = true
button_group = ExtResource("3_77ocs")
text = "Use"
script = ExtResource("3_su7pr")
command = 9

[node name="InventoryContainer" type="HBoxContainer" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
script = ExtResource("10_34gga")

[node name="ScrollButtons" type="VBoxContainer" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Up" type="TextureButton" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollButtons"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_oxi4b")
texture_pressed = SubResource("AtlasTexture_ogfoj")
texture_hover = SubResource("AtlasTexture_af2l8")
texture_disabled = SubResource("AtlasTexture_qft8m")
stretch_mode = 3

[node name="Down" type="TextureButton" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollButtons"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture_normal = SubResource("AtlasTexture_l1x80")
texture_pressed = SubResource("AtlasTexture_8qjlh")
texture_hover = SubResource("AtlasTexture_jhaqa")
texture_disabled = SubResource("AtlasTexture_5757h")
stretch_mode = 3

[node name="ScrollContainer" type="ScrollContainer" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer"]
layout_mode = 2
size_flags_horizontal = 3
scroll_vertical_custom_step = 27.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="Box" type="GridContainer" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 4

[node name="Slot" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot2" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot3" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot4" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot5" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot6" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot7" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot8" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot9" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot10" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot11" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot12" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot13" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot14" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot15" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="Slot16" parent="BottomContainer/VBoxContainer/PanelContainer/HBoxContainer/InventoryContainer/ScrollContainer/Box" instance=ExtResource("13_67u47")]
layout_mode = 2

[node name="DialogMenu" parent="." instance=ExtResource("7_n3yn3")]
layout_mode = 1
metadata/_edit_lock_ = true

[node name="BtnSettings" type="TextureButton" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 21.0
grow_horizontal = 0
texture_normal = ExtResource("13_80hcp")

[node name="Cursor" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_xtf0b")
animation = &"active"

[node name="HoverTextCursor" parent="." instance=ExtResource("4_ljv1q")]
unique_name_in_owner = true
layout_mode = 1
offset_right = -199.0
size_flags_vertical = 3
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 12
fit_content = true
script = ExtResource("6_olqnt")
follows_cursor = true

[node name="Popups" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="9VerbSettingsPopup" parent="Popups" instance=ExtResource("12_b7ut3")]
visible = false
layout_mode = 1

[node name="SaveAndLoadPopup" parent="Popups" instance=ExtResource("15_t7jqg")]
visible = false
layout_mode = 1

[node name="HistoryPopup" parent="Popups" instance=ExtResource("15_5234w")]
visible = false
layout_mode = 1

[node name="9VerbQuitPopup" parent="Popups" instance=ExtResource("20_qsfrl")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[editable path="DialogText"]
